@startuml
'https://plantuml.com/class-diagram

AbstractFlyingObject <|-- AbstractAircraft
AbstractAircraft     <|-- HeroAircraft
AbstractAircraft     <|-- EnemyAircraft
EnemyAircraft        <|-- MobEnemy
EnemyAircraft        <|-- EliteEnemy
EnemyAircraft        <|-- BossEnemy

AbstractFlyingObject <|-- BaseBullet
BaseBullet           <|-- HeroBullet
BaseBullet           <|-- EnemyBullet

AbstractFlyingObject <|-- AbstractProps
AbstractProps        <|-- BloodProps
AbstractProps        <|-- BombProps
AbstractProps        <|-- FireProps

abstract class AbstractFlyingObject {
    # locationX: int
    # locationY: int
    # speedX   : int
    # speedY   : int
    # image    : BufferedImage
    # width    : int
    # height   : int
    # isValid  : boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward(): void
    + crash(AbstractFlyingObject flyingobject): boolean
    + getLocationX(): int
    + getLocationY(): int
    + setLocation(double LocationX, double LocationY): void
    + getSpeedX(): int
    + getSpeedY(): int
    + getImage(): BufferedImage
    + getWidth(): int
    + getHeight(): int
    + notValid(): boolean
    + vanish(): boolean
}

abstract class AbstractAircraft {
    # maxHp: int
        # hp   : int
        # shootNum: int
        # power: int
        # shootDirection: int
        # shootStrategy: ShootStrategy

        + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp, int shootNum, int power, int shootDirection, ShootStrategy shootStrategy)
        + setShootStrategy(ShootStrategy shootStrategy): void
        + shoot(): List<BaseBullet>
        + decreaseHp(int decrease): void
        + increaseHp(int increase): void
        + setHp(int hp): void
        + setShootNum(int shootNum): void
        + setShootDirection(int shootDirection): void
        + setPower(int power): void
        + getHp(): int
        + getShootNum(): int
        + getShootDirection(): int
        + getPower(): int
}

class EnemyAircraft {
    + EnemyAircraft(int locationX, int locationY, int speedX, int speedY, int hp, int shootNum, int power, int shootDirection, ShootStrategy shootStrategy)
    + dropProps(): List<AbstractProps>
}

class HeroAircraft {
    - {static} heroAircraft : HeroAircraft

    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp, int shootNum, int power, int shootDirection, ShootStrategy shootStrategy)
    + {static} getHeroAircraft(): HeroAircraft
    + forward(): void
}

class MobEnemy {

    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp, int shootNum, int power, int shootDirection, ShootStrategy shootStrategy)
    + forward(): void
    + dropProps(): List<AbstractProps>
}

class EliteEnemy {
    - propsList: List<AbstractProps>

    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp, int shootNum, int power, int shootDirection, ShootStrategy shootStrategy)
    + forward(): void
    + dropProps(): List<AbstractProps>
}

class BossEnemy {

    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp, int shootNum, int power, int shootDirection, ShootStrategy shootStrategy)
    + forward(): void
    + dropProps(): List<AbstractProps>
}

class BaseBullet {
    - power: int

    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward(): void
    + getPower(): int
}

class EnemyBullet {

    + EnemyBullet(int locationX, int locationY, int speedX, int speedY, int power)
}

class HeroBullet {

    + HeroBullet(int locationX, int locationY, int speedX, int speedY, int power)
}

abstract class AbstractProps {
    # propsSpeedX: int
    # propsSpeedY: int

    + AbstractProps(int locationX, int locationY)
    + {abstract} useProps(): void
    + forward(): void
}

class BloodProps {
    -treatment: int

    + HpProps(int locationX, int locationY)
    + useProps(): void
}

class BombProps {

    + BombProps(int locationX, int locationY)
    + useProps(): void
}

class BulletProps {

    + FireProps(int locationX, int locationY)
    + useProps(): void
}

@enduml